@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.7 2004/02/02 12:40:17 andijahja Exp $
+ * $Id: ChangeLog,v 1.8 2004/02/02 21:21:21 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-02-03 09:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+   * contrib/unicode/hbencode.c
+     + Add option to manually configure line length of encoded file (default is 128)
+
 2004-02-03 04:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
    * contrib/unicode/hbencode.c
      ! optimization on YYENNCODE_FILE*() functions
